--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "log4js": "^0.6.37",
     "mkdirp": "^0.5.1",
-    "moment": "^2.13.0"
+    "moment": "^2.13.0",
+    "promise": "^7.1.1"
   }
 }
